fix: aggiunto gap nel nav

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ div.cont-nav{
     justify-content: space-between;
     align-items: center;
     max-width: 80%;
+    gap: 20px;
 
     height: 100%;   
     margin-left: auto;
